Adicionando responsividade na section produtos

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                 <div class="cta_buttons">
                     <button class="btnDefault">Ver produtos</button>
-                    <ul class="navList_social social">
+                    <ul class="social">
                         <li class="social_buttons"><a href=""><i class="fa-brands fa-instagram"></i></a></li>
                         <li class="social_buttons"><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
                         <li class="social_buttons"><a href=""><i class="fa-solid fa-envelope"></i></a></li>
@@ -74,7 +74,7 @@
             <h2 class="section-title">Produtos</h2>
             <div class="container">
                 <form class="container-form" id="search-form">
-                    <input type="text" id="search-input" placeholder="Digite o nome do produto...">
+                    <input type="text" id="search-input" placeholder="Produto...">
                     <button class="btnDefault" type="submit">Buscar</button>
                 </form>
                 <div id="categories">
@@ -86,6 +86,17 @@
                     <button data-category="roupas masculinas">Roupas Masculinas</button>
                     <button data-category="roupas femininas">Roupas Femininas</button>
                 </div>
+                <button class="btnMobile_categorias">Categorias</button>
+                <div id="categoriesMobile">
+                    <button class="btn_Mobile_Item" data-category="eletronicos">Eletrônicos</button>
+                    <button class="btn_Mobile_Item" data-category="roupas">Roupas</button>
+                    <button class="btn_Mobile_Item" data-category="cosmeticos">Cosméticos</button>
+                    <button class="btn_Mobile_Item" data-category="esportes">Esportes</button>
+                    <button class="btn_Mobile_Item" data-category="mercado">Mercado</button>
+                    <button class="btn_Mobile_Item" data-category="roupas masculinas">Roupas Masculinas</button>
+                    <button class="btn_Mobile_Item" data-category="roupas femininas">Roupas Femininas</button>
+                </div>
+                
                 <div id="results"></div>
             </div>
           
