arrumando o design e responsividade dos products

--- a/index.html
+++ b/index.html
@@ -83,36 +83,35 @@
                 <h3>Pesquise por Categorias</h3>
                 <div id="categories">
                     <button class="categoriesBtn" data-category="eletronicos">
-                        <i class="fa-solid fa-computer"></i>
+                        <i class="fa-solid fa-computer" data-category="eletronicos"></i>
                         Eletrônicos
                     </button>
                     <button class="categoriesBtn" data-category="roupas">
-                        <i class="fa-solid fa-shirt"></i>
+                        <i class="fa-solid fa-shirt " data-category="roupas"></i>
                         Roupas
                     </button>
                     <button class="categoriesBtn" data-category="cosmeticos">
-                        <i class="bi bi-brush-fill"></i>
+                        <i class="bi bi-brush-fill" data-category="cosmeticos"></i>
                         Cosméticos
                     </button>
                     <button class="categoriesBtn" data-category="esportes">
-                        <i class="fa-regular fa-futbol"></i>
+                        <i class="fa-regular fa-futbol" data-category="esportes"></i>
                         Esportes
                     </button>
                     <button class="categoriesBtn" data-category="mercado">
-                        <i class="fa-solid fa-shop"></i>
+                        <i class="fa-solid fa-shop" data-category="mercado"></i>
                         Mercado
                     </button>
                     <button class="categoriesBtn" data-category="roupas masculinas">
-                        <i class="bi bi-gender-male"></i>
+                        <i class="bi bi-gender-male" data-category="roupas masculinas"></i>
                         Roupas Masculinas
                     </button>
                     <button class="categoriesBtn" data-category="roupas femininas">
-                        <i class="bi bi-gender-female"></i>
+                        <i class="bi bi-gender-female" data-category="roupas femininas"></i>
                         Roupas Femininas
                     </button>
                 </div>
                
-                <button class="btnMobile_categorias">Categorias</button>
                 
                 <div id="categoriesMobile">
                     <button class="btn_Mobile_Item" data-category="eletronicos">
