--- a/index.html
+++ b/index.html
@@ -153,8 +153,11 @@
             <span class="copy">
                 &copy 2025 Finder
             </span>
-
-            div
+            <ul class="social">
+                <li class="social_buttons"><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                <li class="social_buttons"><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+                <li class="social_buttons"><a href=""><i class="fa-solid fa-envelope"></i></a></li>
+            </ul>
         </div>
     </footer>
     <script src="/src/scripts/btnMobile.js"></script>
