--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
     <title>Finder</title>
 </head>
 
@@ -24,12 +25,7 @@
                 <li class="navList_item"><a href="">Produtos</a></li>
                 <li class="navList_item"><a href="">Sobre</a></li>
             </ul>
-            <ul class="navList_social">
-                <li class="social_buttons"><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                <li class="social_buttons"><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
-                <li class="social_buttons"><a href=""><i class="fa-solid fa-envelope"></i></a></li>
-            </ul>
-            <button class="btn_Mobile btnDefault">
+            <button class="btn_Mobile">
                 <i class="fa-solid fa-bars"></i>
             </button>
         </nav>
