--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
                 <li class="navList_item"><a href="">Sobre</a></li>
             </ul>
             <ul class="navList_social">
-                <li class="social_buttons"><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                <li class="social_buttons"><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
-                <li class="social_buttons"><a href=""><i class="fa-solid fa-envelope"></i></a></li>
+                <li class="login"> <a href="/src/pages/login.html">Login</a> </li>
+                <li class="cadastro"> <a href="">Cadastro</a></li>
             </ul>
             <button class="btn_Mobile btnDefault">
                 <i class="fa-solid fa-bars"></i>
@@ -154,7 +153,7 @@
                 &copy 2025 Finder
             </span>
 
-            div
+            
         </div>
     </footer>
     <script src="/src/scripts/btnMobile.js"></script>
