--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/styles/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <title>Login ao Finder</title>
 </head>
-<body>
 
+<body>
     <header class="headerContainer">
         <nav class="headerNavBar">
             <div class="navlogo"></div>
@@ -16,10 +23,10 @@
                 <li class="navList_item"><a href="">Sobre</a></li>
             </ul>
             <ul class="navList_social">
-                <li class="social_buttons"><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                <li class="social_buttons"><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
-                <li class="social_buttons"><a href=""><i class="fa-solid fa-envelope"></i></a></li>
+                <li class="login"> <a href="/src/pages/login.html">Login</a> </li>
+                <li class="cadastro"> <a href="">Cadastro</a></li>
             </ul>
+
             <button class="btn_Mobile btnDefault">
                 <i class="fa-solid fa-bars"></i>
             </button>
@@ -30,6 +37,66 @@
             <li class="navList_item"><a href="">Sobre</a></li>
         </ul>
     </header>
-    
+
+
+    <div class="containerLogin">
+        <div class="content first-content">
+            <div class="first-column">
+                <h2 class="title-login">Welcome back!</h2>
+                <p class="descripition">To keep connected with us</p>
+                <p class="descripition">please logiin with your personal info.</p>
+                <button class="btn-login">sign in</button>
+            </div>
+            <div class="second-column">
+                <h2 class="title-login">Create account</h2>
+                <div class="social-media-login">
+                    <ul>
+                        <li><a href="#">facebook</a></li>
+                        <li><a href="#">google</a></li>
+                        <li><a href="#">Linkedin</a></li>
+                    </ul>
+                </div> <!--icones social media-->
+                <p class="description">or use your email for registration:</p>
+                <form class="form">
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email">
+                    <input type="password" placeholder="Password">
+                    <button class="btn-login">sign up</button>
+                </form>
+            </div> <!--second column-->
+        </div> <!--first content-->
+
+        <div class="content second-content">
+            <div class="first-column">
+                <h2 class="title-login">Hello, friends!</h2>
+                <p class="descripition">Enter your personal details</p>
+                <p class="descripition">and start journey with us</p>
+                <button class="btn-login">sign up</button>
+            </div>  <!--first column-->
+
+            <div class="second-column">
+                <h2 class="title-login">Sign in to Finder</h2>
+                <div class="social-media-login">
+                    <ul>
+                        <li><a href="#">facebook</a></li>
+                        <li><a href="#">google</a></li>
+                        <li><a href="#">Linkedin</a></li>
+                    </ul>
+                </div> <!--icones social media-->
+                <p class="description">or use your email account:</p>
+                <form class="form">
+                    <input type="email" placeholder="Email">
+                    <input type="password" placeholder="Password">
+                    <a href="#">forgot your password?</a>
+                    <button class="btn-login">sign in</button>
+                </form>
+            </div> <!--second column-->
+        </div>  <!--second content-->
+    </div>
+
+    <script src="/src/scripts/btnMobile.js"></script>
+    <script src="src/scripts/amazon.js"></script>
+
 </body>
+
 </html>
