--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <nav class="headerNavBar">
             <div class="navlogo"></div>
             <ul class="navList">
-                <li class="navList_item active"><a href="">Inicio</a></li>
-                <li class="navList_item"><a href="">Produtos</a></li>
-                <li class="navList_item"><a href="">Sobre</a></li>
+                <li class="navList_item active"><a href="index.html">Inicio</a></li>
+                <li class="navList_item"><a href="#productss">Produtos</a></li>
+                <li class="navList_item"><a href="src/pages/about.html">Sobre</a></li>
             </ul>
             <button class="btn_Mobile">
                 <i class="fa-solid fa-bars"></i>
@@ -63,7 +63,7 @@
                 <img src="src/images/blueComputer.png" alt="">
             </div>
         </section>
-
+        <span id="productss"></span>
         <section class="projects">
             <h2 class="section-title">Produtos</h2>
             <div class="container">
