--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li class="login"> <a href="/src/pages/login.html">Login</a> </li>
                 <li class="cadastro"> <a href="">Cadastro</a></li>
             </ul>
-            <button class="btn_Mobile btnDefault">
+            <button class="btn_Mobile">
                 <i class="fa-solid fa-bars"></i>
             </button>
         </nav>
