arrumando os conflitos

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -18,16 +18,15 @@
         <nav class="headerNavBar">
             <div class="navlogo"></div>
             <ul class="navList">
-                <li class="navList_item active"><a href="">Inicio</a></li>
-                <li class="navList_item"><a href="">Produtos</a></li>
-                <li class="navList_item"><a href="">Sobre</a></li>
+                <li class="navList_item active"><a href="index.html">Inicio</a></li>
+                <li class="navList_item"><a href="#productss">Produtos</a></li>
+                <li class="navList_item"><a href="src/pages/about.html">Sobre</a></li>
             </ul>
             <ul class="navList_social">
                 <li class="login"> <a href="/src/pages/login.html">Login</a> </li>
                 <li class="cadastro"> <a href="">Cadastro</a></li>
             </ul>
-
-            <button class="btn_Mobile btnDefault">
+            <button class="btn_Mobile">
                 <i class="fa-solid fa-bars"></i>
             </button>
         </nav>
