--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main class="content">
         <section class="home">
             <div class="shape"></div>
-            <div class="cta">
+            <div class="cta cta-reveal">
                 <h1 class="ctaTitle">
                     Aumente suas vendas! Cadastre seus produtos e <span>alcance mais clientes na sua
                         região!</span>
@@ -64,12 +64,12 @@
                 </div>
 
             </div>
-            <div class="banner">
+            <div class="banner banner-reveal img-up-down">
                 <img src="src/images/blueComputer.png" alt="">
             </div>
         </section>
         <span id="productss"></span>
-        <section class="projects">
+        <section class="projects projects-reveal">
             <h2 class="section-title">Produtos</h2>
             <div class="container">
 
@@ -165,6 +165,7 @@
     </footer>
     <script src="/src/scripts/btnMobile.js"></script>
     <script src="src/scripts/amazon.js"></script>
+    <script src="src/scripts/localization.js"></script>
 </body>
 
 </html>
