--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="headerNavBar">
             <div class="navlogo"></div>
             <ul class="navList">
-                <li class="navList_item active"><a href="index.html">Inicio</a></li>
+                <li class="navList_item active"><a href="#home">Inicio</a></li>
                 <li class="navList_item"><a href="#productss">Produtos</a></li>
                 <li class="navList_item"><a href="src/pages/about.html">Sobre</a></li>
             </ul>
@@ -35,13 +35,13 @@
             </button>
         </nav>
         <ul class="navList_Mobile">
-            <li class="navList_item"><a href="">Inicio</a></li>
-            <li class="navList_item"><a href="">Produtos</a></li>
-            <li class="navList_item"><a href="">Sobre</a></li>
+            <li class="navList_item"><a href="#home">Inicio</a></li>
+            <li class="navList_item"><a href="#productss">Produtos</a></li>
+            <li class="navList_item"><a href="src/pages/about.html">Sobre</a></li>
         </ul>
     </header>
 
-    <main class="content">
+    <main id="home" class="content">
         <section class="home">
             <div class="shape"></div>
             <div class="cta cta-reveal">
