fazendo da logo um link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
     <header class="headerContainer">
         <nav class="headerNavBar">
-            <div class="navlogo"></div>
+            <a href="/index.html">
+                <div class="navlogo"></div>
+            </a>
             <ul class="navList">
                 <li class="navList_item active"><a href="#home">Inicio</a></li>
                 <li class="navList_item"><a href="#productss">Produtos</a></li>
