--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -18,7 +18,9 @@
     <header class="headerContainer">
 
         <nav class="headerNavBar">
-            <div class="navlogo"></div>
+            <a href="/index.html">
+                <div class="navlogo"></div>
+            </a>
             <ul class="navList">
                 <li class="navList_item"><a href="/index.html">Inicio</a></li>
                 <li class="navList_item"><a href="/index.html">Produtos</a></li>
