fazendo o botao virar um link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </p>
 
                 <div class="cta_buttons">
-                    <button class="btnDefault">Ver produtos</button>
+                    <button class="btnDefault"><a href="#productss">Ver produtos</a></button>
                     <ul class="social">
                         <li class="social_buttons"><a href=""><i class="fa-brands fa-instagram"></i></a></li>
                         <li class="social_buttons"><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
