--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <img src="src/images/wave.svg" alt="">
         <div class="footer_items">
             <span class="copy">
-                &copy 2025 Finder
+                &copy 2025 Finder@v.2
             </span>
             
             <ul class="social">
