--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <header class="headerContainer">
         <nav class="headerNavBar">
-            <a href="/index.html">
+            <a href="index.html">
                 <div class="navlogo"></div>
             </a>
             <ul class="navList">
