--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <script src="https://unpkg.com/scrollreveal"></script>
 
-    <title>Finder</title>
+    <title>Finder.V2</title>
 </head>
 
 <body>
