redirecionando para outra pagina

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="navList">
                 <li class="navList_item active"><a href="#home">Inicio</a></li>
                 <li class="navList_item"><a href="#productss">Produtos</a></li>
-                <li class="navList_item"><a href="src/pages/about.html">Sobre</a></li>
+                <li class="navList_item" ><a href="src/pages/about.html" target="_blank">Sobre</a></li>
             </ul>
             <button class="btn_Mobile">
                 <i class="fa-solid fa-bars"></i>
@@ -35,7 +35,7 @@
         <ul class="navList_Mobile">
             <li class="navList_item"><a href="#home">Inicio</a></li>
             <li class="navList_item"><a href="#productss">Produtos</a></li>
-            <li class="navList_item"><a href="src/pages/about.html">Sobre</a></li>
+            <li class="navList_item"><a href="src/pages/about.html" target="_blank">Sobre</a></li>
         </ul>
     </header>
 
@@ -68,6 +68,7 @@
         </section>
         <span id="productss"></span>
         <section class="projects projects-reveal">
+            
             <h2 class="section-title">Produtos</h2>
             <div class="container">
 
@@ -107,7 +108,7 @@
                         Roupas Femininas
                     </button>
                 </div>
-
+                
 
                 <div id="categoriesMobile">
                     <button class="btn_Mobile_Item" data-category="eletronicos">
