--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/styles/styles.css">
+    <link rel="stylesheet" href="/src/styles/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,42 +14,19 @@
 </head>
 
 <body>
-    <header class="headerContainer">
-        <nav class="headerNavBar">
-            <div class="navlogo"></div>
-            <ul class="navList">
-                <li class="navList_item active"><a href="index.html">Inicio</a></li>
-                <li class="navList_item"><a href="#productss">Produtos</a></li>
-                <li class="navList_item"><a href="src/pages/about.html">Sobre</a></li>
-            </ul>
-            <ul class="navList_social">
-                <li class="login"> <a href="/src/pages/login.html">Login</a> </li>
-                <li class="cadastro"> <a href="">Cadastro</a></li>
-            </ul>
-            <button class="btn_Mobile">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-        </nav>
-        <ul class="navList_Mobile">
-            <li class="navList_item"><a href="">Inicio</a></li>
-            <li class="navList_item"><a href="">Produtos</a></li>
-            <li class="navList_item"><a href="">Sobre</a></li>
-        </ul>
-    </header>
-
 
     <div class="containerLogin">
         <div class="content first-content">
             <div class="first-column">
-                <h2 class="title-login">Welcome back!</h2>
+                <h2 class="title-login-welcome ">Welcome back!</h2>
                 <p class="descripition">To keep connected with us</p>
                 <p class="descripition">please logiin with your personal info.</p>
-                <button class="btn-login">sign in</button>
+                <button class="btn btn-primary">sign in</button>
             </div>
             <div class="second-column">
                 <h2 class="title-login">Create account</h2>
                 <div class="social-media-login">
-                    <ul>
+                    <ul class="list-social-media">
                         <li><a href="#">facebook</a></li>
                         <li><a href="#">google</a></li>
                         <li><a href="#">Linkedin</a></li>
@@ -60,7 +37,7 @@
                     <input type="text" placeholder="Name">
                     <input type="email" placeholder="Email">
                     <input type="password" placeholder="Password">
-                    <button class="btn-login">sign up</button>
+                    <button class="btn">sign up</button>
                 </form>
             </div> <!--second column-->
         </div> <!--first content-->
