corrigindo erro no nome das classes

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/styles/login.css">
+    <link rel="stylesheet" href="/src/styles/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -16,9 +16,9 @@
 <body>
 
     <div class="containerLogin">
-        <div class="content first-content">
+        <div class="contentLogin first-content">
             <div class="first-column">
-                <h2 class="title-login-welcome ">Welcome back!</h2>
+                <h2 class="title title-primary ">Welcome back!</h2>
                 <p class="descripition">To keep connected with us</p>
                 <p class="descripition">please logiin with your personal info.</p>
                 <button class="btn btn-primary">sign in</button>
@@ -42,7 +42,7 @@
             </div> <!--second column-->
         </div> <!--first content-->
 
-        <div class="content second-content">
+        <div class="contentLogin second-content">
             <div class="first-column">
                 <h2 class="title-login">Hello, friends!</h2>
                 <p class="descripition">Enter your personal details</p>
