--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -2,45 +2,56 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/src/styles/styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/src/styles/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
     <title>Login ao Finder</title>
 </head>
 
 <body>
-
     <div class="containerLogin">
         <div class="contentLogin first-content">
             <div class="first-column">
-                <h2 class="title title-primary ">Welcome back!</h2>
-                <p class="descripition">To keep connected with us</p>
-                <p class="descripition">please logiin with your personal info.</p>
-                <button class="btn btn-primary">sign in</button>
+                <h2 class="title title-primary">Welcome back!</h2>
+                <p class="descripition descripition-primary">To keep connected with us</p>
+                <p class="descripition descripition-primary">please logiin with your personal info.</p>
+                <button class="btnLogin btn-primary">sign in</button>
             </div>
             <div class="second-column">
-                <h2 class="title-login">Create account</h2>
+                <h2 class="title title-second">Create account</h2>
                 <div class="social-media-login">
                     <ul class="list-social-media">
-                        <li><a href="#">facebook</a></li>
-                        <li><a href="#">google</a></li>
-                        <li><a href="#">Linkedin</a></li>
+                        <li class="item-social-media">
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        </li>
+
+                        <li class="item-social-media">
+                            <a href="#"><i class="fa-brands fa-google-plus-g"></i></a>
+                        </li>
+
+                        <li class="item-social-media">
+                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                        </li>
                     </ul>
-                </div> <!--icones social media-->
-                <p class="description">or use your email for registration:</p>
-                <form class="form">
-                    <input type="text" placeholder="Name">
-                    <input type="email" placeholder="Email">
-                    <input type="password" placeholder="Password">
-                    <button class="btn">sign up</button>
+                </div>
+                <!--icones social media-->
+                <p class="description descripition-second">or use your email for registration:</p>
+                <form class="formLogin">
+                    <input type="text" placeholder="Name" />
+                    <input type="email" placeholder="Email" />
+                    <input type="password" placeholder="Password" />
+                    <button class="btnLogin btn-second">sign up</button>
                 </form>
-            </div> <!--second column-->
-        </div> <!--first content-->
+            </div>
+            <!--second column-->
+        </div>
+        <!--first content-->
 
         <div class="contentLogin second-content">
             <div class="first-column">
@@ -48,7 +59,8 @@
                 <p class="descripition">Enter your personal details</p>
                 <p class="descripition">and start journey with us</p>
                 <button class="btn-login">sign up</button>
-            </div>  <!--first column-->
+            </div>
+            <!--first column-->
 
             <div class="second-column">
                 <h2 class="title-login">Sign in to Finder</h2>
@@ -58,21 +70,23 @@
                         <li><a href="#">google</a></li>
                         <li><a href="#">Linkedin</a></li>
                     </ul>
-                </div> <!--icones social media-->
+                </div>
+                <!--icones social media-->
                 <p class="description">or use your email account:</p>
-                <form class="form">
-                    <input type="email" placeholder="Email">
-                    <input type="password" placeholder="Password">
+                <form class="formLogin">
+                    <input type="email" placeholder="Email" />
+                    <input type="password" placeholder="Password" />
                     <a href="#">forgot your password?</a>
-                    <button class="btn-login">sign in</button>
+                    <button class="btnLogin btn-secundary">sign in</button>
                 </form>
-            </div> <!--second column-->
-        </div>  <!--second content-->
+            </div>
+            <!--second column-->
+        </div>
+        <!--second content-->
     </div>
 
     <script src="/src/scripts/btnMobile.js"></script>
     <script src="src/scripts/amazon.js"></script>
-
 </body>
 
 </html>
