adicionando ícones no login

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -42,10 +42,23 @@
                 </div>
                 <!--icones social media-->
                 <p class="description descripition-second">or use your email for registration:</p>
+
                 <form class="formLogin">
-                    <input type="text" placeholder="Name" />
-                    <input type="email" placeholder="Email" />
-                    <input type="password" placeholder="Password" />
+                    <label class="Labellogin-input" for="">
+                        <i class="fa-solid fa-user icon-modify"></i>
+                        <input type="text" placeholder="Name" />
+                    </label>
+                    
+                    <label class="Labellogin-input" for="">
+                        <i class="fa-solid fa-envelope icon-modify"></i>
+                        <input type="email" placeholder="Email" />
+                    </label>
+
+                    <label class="Labellogin-input" for="">
+                         <i class="fa-solid fa-lock icon-modify "></i>
+                        <input type="email" placeholder="Email" />
+                    </label>
+                   
                     <button class="btnLogin btn-second">sign up</button>
                 </form>
             </div>
