adicionando variáveis para cores

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -18,13 +18,13 @@
     <div class="containerLogin">
         <div class="contentLogin first-content">
             <div class="first-column">
-                <h2 class="title title-primary">Welcome back!</h2>
-                <p class="descripition descripition-primary">To keep connected with us</p>
-                <p class="descripition descripition-primary">please logiin with your personal info.</p>
+                <h2 class="titleLogin title-primary">Welcome back!</h2>
+                <p class="descripitionLogin descripition-primary">To keep connected with us</p>
+                <p class="descripitionLogin descripition-primary">please logiin with your personal info.</p>
                 <button class="btnLogin btn-primary">sign in</button>
             </div>
             <div class="second-column">
-                <h2 class="title title-second">Create account</h2>
+                <h2 class="titleLogin title-second">Create account</h2>
                 <div class="social-media-login">
                     <ul class="list-social-media">
                         <li class="item-social-media">
@@ -69,8 +69,8 @@
         <div class="contentLogin second-content">
             <div class="first-column">
                 <h2 class="title-login">Hello, friends!</h2>
-                <p class="descripition">Enter your personal details</p>
-                <p class="descripition">and start journey with us</p>
+                <p class="descripitionLogin">Enter your personal details</p>
+                <p class="descripitionLogin">and start journey with us</p>
                 <button class="btn-login">sign up</button>
             </div>
             <!--first column-->
@@ -85,7 +85,7 @@
                     </ul>
                 </div>
                 <!--icones social media-->
-                <p class="description">or use your email account:</p>
+                <p class="descriptionLogin">or use your email account:</p>
                 <form class="formLogin">
                     <input type="email" placeholder="Email" />
                     <input type="password" placeholder="Password" />
