corrigindo nome das classes
classes labelLogin

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -19,8 +19,8 @@
         <div class="contentLogin first-content">
             <div class="first-column">
                 <h2 class="titleLogin title-primary">Welcome back!</h2>
-                <p class="descripitionLogin descripition-primary">To keep connected with us</p>
-                <p class="descripitionLogin descripition-primary">please logiin with your personal info.</p>
+                <p class="descriptionLogin description-primary">To keep connected with us</p>
+                <p class="descriptionLogin description-primary">please logiin with your personal info.</p>
                 <button class="btnLogin btn-primary">sign in</button>
             </div>
             <div class="second-column">
@@ -41,20 +41,20 @@
                     </ul>
                 </div>
                 <!--icones social media-->
-                <p class="description descripition-second">or use your email for registration:</p>
+                <p class="descriptionLogin description-second">or use your email for registration:</p>
 
                 <form class="formLogin">
-                    <label class="Labellogin-input" for="">
+                    <label class="labelLogin-input" for="">
                         <i class="fa-solid fa-user icon-modify"></i>
                         <input type="text" placeholder="Name" />
                     </label>
                     
-                    <label class="Labellogin-input" for="">
+                    <label class="labelLogin-input" for="">
                         <i class="fa-solid fa-envelope icon-modify"></i>
                         <input type="email" placeholder="Email" />
                     </label>
 
-                    <label class="Labellogin-input" for="">
+                    <label class="labelLogin-input" for="">
                          <i class="fa-solid fa-lock icon-modify "></i>
                         <input type="email" placeholder="Email" />
                     </label>
@@ -69,8 +69,8 @@
         <div class="contentLogin second-content">
             <div class="first-column">
                 <h2 class="title-login">Hello, friends!</h2>
-                <p class="descripitionLogin">Enter your personal details</p>
-                <p class="descripitionLogin">and start journey with us</p>
+                <p class="descriptionLogin">Enter your personal details</p>
+                <p class="descriptionLogin">and start journey with us</p>
                 <button class="btn-login">sign up</button>
             </div>
             <!--first column-->
