arrumando o header fixed e dando um destiono aos links do header responsivo do about-me

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -31,9 +31,9 @@
             </button>
         </nav>
         <ul class="navList_Mobile">
-            <li class="navList_item"><a href="">Inicio</a></li>
-            <li class="navList_item"><a href="">Produtos</a></li>
-            <li class="navList_item"><a href="">Sobre</a></li>
+            <li class="navList_item"><a href="/index.html">Inicio</a></li>
+            <li class="navList_item"><a href="/index.html">Produtos</a></li>
+            <li class="navList_item"><a href="about.html">Sobre</a></li>
         </ul>
     </header>
     <main class="contentAbout content">
