--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -25,7 +25,7 @@
                 <p class="descriptionLogin description-primary">
                     faça login com suas informações
                 </p>
-                <button class="btnLogin btn-primary">Entrar</button>
+                <button id="signinLogin" class="btnLogin btn-primary">Entrar</button>
             </div>
             <div class="second-column">
                 <h2 class="titleLogin title-second">Crie uma conta</h2>
@@ -56,17 +56,17 @@
                 </p>
 
                 <form class="formLogin">
-                    <label class="labelLogin-input" for="">
+                    <label class="labelLogin-input">
                         <i class="fa-solid fa-user icon-modify"></i>
                         <input type="text" placeholder="Nome" />
                     </label>
 
-                    <label class="labelLogin-input" for="">
+                    <label class="labelLogin-input">
                         <i class="fa-solid fa-envelope icon-modify"></i>
                         <input type="email" placeholder="Email" />
                     </label>
 
-                    <label class="labelLogin-input" for="">
+                    <label class="labelLogin-input">
                         <i class="fa-solid fa-lock icon-modify"></i>
                         <input type="password" placeholder="Senha" />
                     </label>
@@ -83,7 +83,7 @@
                 <h2 class="titleLogin title-primary">Olá, amigo!</h2>
                 <p class="descriptionLogin description-primary">Digite seus dados pessoais</p>
                 <p class="descriptionLogin description-primary">e comece a jornada conosco</p>
-                <button class="btnLogin btn-primary">Criar</button>
+                <button id="signupLogin" class="btnLogin btn-primary">Criar</button>
             </div>
             <!--first column-->
 
@@ -114,18 +114,17 @@
                 <!--icones social media-->
                 <p class="descriptionLogin description-second">ou use sua conta de email:</p>
                 <form class="formLogin">
-                    <form class="formLogin">
-                        <label class="labelLogin-input" for="">
+                        <label class="labelLogin-input">
                             <i class="fa-solid fa-user icon-modify"></i>
                             <input type="text" placeholder="Nome" />
                         </label>
     
-                        <label class="labelLogin-input" for="">
+                        <label class="labelLogin-input">
                             <i class="fa-solid fa-envelope icon-modify"></i>
                             <input type="email" placeholder="Email" />
                         </label>
     
-                        <label class="labelLogin-input" for="">
+                        <label class="labelLogin-input">
                             <i class="fa-solid fa-lock icon-modify"></i>
                             <input type="password" placeholder="Senha" />
                         </label>
@@ -139,8 +138,7 @@
         <!--second content-->
     </div>
 
-    <script src="/src/scripts/btnMobile.js"></script>
-    <script src="src/scripts/amazon.js"></script>
+    <script src="/src/scripts/login.js"></script>
 </body>
 
 </html>
