fazendo script novo para favoritar produtos

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
     <script src="/src/scripts/btnMobile.js"></script>
     <script src="src/scripts/amazon.js"></script>
     <script src="src/scripts/localization.js"></script>
+    <script src="src/scripts/fav.js"></script>
 </body>
 
 </html>
