--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li class="navList_item active"><a href="#home">Inicio</a></li>
                 <li class="navList_item"><a href="#productss">Produtos</a></li>
                 <li class="navList_item" ><a href="src/pages/about.html" target="_blank">Sobre</a></li>
+                <li class="navList_item"><i class="fa-solid fa-heart"></i></li>
             </ul>
             <button class="btn_Mobile">
                 <i class="fa-solid fa-bars"></i>
@@ -45,6 +46,7 @@
             <li class="navList_item"><a href="#home">Inicio</a></li>
             <li class="navList_item"><a href="#productss">Produtos</a></li>
             <li class="navList_item"><a href="src/pages/about.html" target="_blank">Sobre</a></li>
+            <li class="navList_item"><i class="fa-solid fa-heart"></i></li>
         </ul>
     </header>
 
