--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li class="navList_item active"><a href="#home">Inicio</a></li>
                 <li class="navList_item"><a href="#productss">Produtos</a></li>
                 <li class="navList_item" ><a href="src/pages/about.html" target="_blank">Sobre</a></li>
-                <li class="navList_item"><i class="fa-solid fa-heart"></i></li>
+                <li class="navList_item"><a href="src/pages/favorites.html"><i class="fa-solid fa-heart"></i></a></li>
             </ul>
             <button class="btn_Mobile">
                 <i class="fa-solid fa-bars"></i>
