unificando o about com o index e separando os produtos

--- a/src/pages/favorites.html
+++ b/src/pages/favorites.html
@@ -14,8 +14,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="/Finder.v2/src/styles/styles.css" />
-    <link rel="stylesheet" href="/src/styles/styles.css" />
+    <link rel="stylesheet" href="/src/styles/styles.css">
+    <link rel="stylesheet" href="/src/styles/favoritos.css">
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
@@ -27,31 +27,26 @@
   </head>
   <body>
     <header class="headerContainer">
+
       <nav class="headerNavBar">
-        <a href="../../index.html">
-          <div class="navlogo"></div>
-        </a>
-        <ul class="navList">
-          <li class="navList_item active"><a href="#home">Inicio</a></li>
-          <li class="navList_item"><a href="#productss">Produtos</a></li>
-          <li class="navList_item">
-            <a href="about.html" target="_blank">Sobre</a>
-          </li>
-          <li class="navList_item"><i class="fa-solid fa-heart"></i></li>
-        </ul>
-        <button class="btn_Mobile">
-          <i class="fa-solid fa-bars"></i>
-        </button>
+          <a href="/index.html">
+              <div class="navlogo"></div>
+          </a>
+          <ul class="navList">
+              <li class="navList_item"><a href="/index.html">Inicio</a></li>
+              <li class="navList_item "><a href="/index.html">Produtos</a></li>
+              <li class="navList_item active"><a href="favorites.html"><i class="fa-solid fa-heart"></i></a></li>
+          </ul>
+          <button class="btn_Mobile">
+              <i class="fa-solid fa-bars"></i>
+          </button>
       </nav>
       <ul class="navList_Mobile">
-        <li class="navList_item"><a href="#home">Inicio</a></li>
-        <li class="navList_item"><a href="#productss">Produtos</a></li>
-        <li class="navList_item">
-          <a href="about.html" target="_blank">Sobre</a>
-        </li>
-        <li class="navList_item"><i class="fa-solid fa-heart"></i></li>
+          <li class="navList_item"><a href="/index.html">Inicio</a></li>
+          <li class="navList_item active"><a href="/index.html">Produtos</a></li>
+          <li class="navList_item"><a href="favorites.html"><i class="fa-solid fa-heart"></i></a></li>
       </ul>
-    </header>
+  </header>
     <section class="container-favoritos">
       <main>
         <div>
