arrumando o header do fav um pouco para a esquerda

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="navlogo"></div>
             </a>
             <ul class="navList">
-                <li class="navList_item active"><a href="#home">Inicio</a></li>
+                <li class="navList_item active"><a href="index.html">Inicio</a></li>
                 <li class="navList_item" ><a href="src/pages/products.html" >Produtos</a></li>
                 <li class="navList_item"><a href="src/pages/favorites.html"><i class="fa-solid fa-heart"></i></a></li>
             </ul>
@@ -43,7 +43,7 @@
             </button>
         </nav>
         <ul class="navList_Mobile">
-            <li class="navList_item"><a href="#home">Inicio</a></li>
+            <li class="navList_item"><a href="index.html">Inicio</a></li>
             <li class="navList_item"><a href="src/pages/products.html">Produtos</a></li>
             <li class="navList_item"><a href="src/pages/favorites.html"><i class="fa-solid fa-heart"></i></a></li>
         </ul>
