--- a/src/pages/favorites.html
+++ b/src/pages/favorites.html
@@ -34,7 +34,7 @@
           </a>
           <ul class="navList">
               <li class="navList_item"><a href="/index.html">Inicio</a></li>
-              <li class="navList_item "><a href="/index.html">Produtos</a></li>
+              <li class="navList_item "><a href="products.html">Produtos</a></li>
               <li class="navList_item active"><a href="favorites.html"><i class="fa-solid fa-heart"></i></a></li>
           </ul>
           <button class="btn_Mobile">
@@ -43,7 +43,7 @@
       </nav>
       <ul class="navList_Mobile">
           <li class="navList_item"><a href="/index.html">Inicio</a></li>
-          <li class="navList_item active"><a href="/index.html">Produtos</a></li>
+          <li class="navList_item active"><a href="products.html">Produtos</a></li>
           <li class="navList_item"><a href="favorites.html"><i class="fa-solid fa-heart"></i></a></li>
       </ul>
   </header>
