--- a/src/pages/products.html
+++ b/src/pages/products.html
@@ -24,7 +24,7 @@
             </a>
             <ul class="navList">
                 <li class="navList_item"><a href="/index.html">Inicio</a></li>
-                <li class="navList_item active"><a href="/index.html">Produtos</a></li>
+                <li class="navList_item active"><a href="products.html">Produtos</a></li>
                 <li class="navList_item"><a href="favorites.html"><i class="fa-solid fa-heart"></i></a></li>
             </ul>
             <button class="btn_Mobile">
@@ -33,7 +33,7 @@
         </nav>
         <ul class="navList_Mobile">
             <li class="navList_item"><a href="/index.html">Inicio</a></li>
-            <li class="navList_item active"><a href="/index.html">Produtos</a></li>
+            <li class="navList_item active"><a href="products.html">Produtos</a></li>
             <li class="navList_item"><a href="favorites.html"><i class="fa-solid fa-heart"></i></a></li>
         </ul>
     </header>
