adicioando link ao botao produtos

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </p>
 
                 <div class="cta_buttons">
-                    <button class="btnDefault"><a href="#productss">Ver produtos</a></button>
+                    <button class="btnDefault"><a href="src/pages/products.html">Ver produtos</a></button>
                     <ul class="social">
                         <li class="social_buttons"><a href=""><i class="fa-brands fa-instagram"></i></a></li>
                         <li class="social_buttons"><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
