--- a/src/pages/favorites.html
+++ b/src/pages/favorites.html
@@ -43,8 +43,8 @@
       </nav>
       <ul class="navList_Mobile">
           <li class="navList_item"><a href="/index.html">Inicio</a></li>
-          <li class="navList_item active"><a href="products.html">Produtos</a></li>
-          <li class="navList_item"><a href="favorites.html"><i class="fa-solid fa-heart"></i></a></li>
+          <li class="navList_item "><a href="products.html">Produtos</a></li>
+          <li class="navList_item active"><a href="favorites.html"><i class="fa-solid fa-heart"></i></a></li>
       </ul>
   </header>
     <section class="container-favoritos">
@@ -56,5 +56,6 @@
         </div>
       </main>
     </section>
+    <script src="/src/scripts/btnMobile.js"></script>
   </body>
 </html>
