começando a deixar o form funcional

--- a/index.html
+++ b/index.html
@@ -151,19 +151,19 @@
                 <form action="">
                     <div>
                         <label for="nome">Nome</label>
-                        <input id="nome" type="text">
+                        <input id="nome" type="text" required>
                     </div>
                     <div>
                         <label for="email">E-mail</label>
-                        <input type="email" name="email" id="email">
+                        <input type="email" name="email" id="email" required>
                     </div>
                     <div>
                         <label for="cel">Celular</label>
-                        <input type="number" name="cel" id="cel">
+                        <input type="number" name="cel" id="cel" required>
                     </div>
                     <div>
                         <label for="msg">Alguma duvida?</label>
-                        <input class="msg" type="text" name="msg" id="msg">
+                        <textarea class ="msg "name="msg" id="msg" required></textarea>
                     </div>
                     <button class="btnDefault" type="submit">Enviar</button>
                 </form>
