--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -15,6 +15,27 @@
 </head>
 
 <body>
+    <header class="headerContainer">
+        <nav class="headerNavBar">
+            <a href="index.html">
+                <div class="navlogo"></div>
+            </a>
+            <ul class="navList">
+                <li class="navList_item active"><a href="#home">Inicio</a></li>
+                <li class="navList_item"><a href="#productss">Produtos</a></li>
+                <li class="navList_item" ><a href="src/pages/about.html" target="_blank">Sobre</a></li>
+            </ul>
+            <button class="btn_Mobile">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+        </nav>
+        <ul class="navList_Mobile">
+            <li class="navList_item"><a href="#home">Inicio</a></li>
+            <li class="navList_item"><a href="#productss">Produtos</a></li>
+            <li class="navList_item"><a href="src/pages/about.html" target="_blank">Sobre</a></li>
+        </ul>
+    </header>
+
     <div class="containerLogin">
         <div class="contentLogin first-content">
             <div class="first-column">
@@ -133,6 +154,22 @@
         </div>
         <!--second content-->
     </div>
+
+    <footer class="rodape">
+        <img src="src/images/wave.svg" alt="">
+        <div class="footer_items">
+            <span class="copy">
+                &copy 2025 Finder@v.2
+            </span>
+            
+            <ul class="social">
+                <li class="social_buttons"><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                <li class="social_buttons"><a href=""><i class="fa-brands fa-whatsapp"></i></a></li>
+                <li class="social_buttons"><a href=""><i class="fa-solid fa-envelope"></i></a></li>
+            </ul>
+            
+        </div>
+    </footer>
 
     <script src="/src/scripts/login.js"></script>
 </body>
