fazendo envio de duvida

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             
             </div>
             <div class="contactSocial">
-                <form action="">
+                <form action="src/php/form.php" method="post">
                     <div>
                         <label for="nome">Nome</label>
                         <input id="nome" type="text" required>
