--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -36,6 +36,7 @@
         </ul>
     </header>
 
+    <main>
     <div class="containerLogin">
         <div class="contentLogin first-content">
             <div class="first-column">
@@ -154,6 +155,8 @@
         </div>
         <!--second content-->
     </div>
+
+</main>
 
     <footer class="rodape">
         <img src="src/images/wave.svg" alt="">
