--- a/src/pages/favorites.html
+++ b/src/pages/favorites.html
@@ -14,8 +14,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="stylesheet" href="/Finder.v2/src/styles/styles.css" />
-    <link rel="stylesheet" href="/src/styles/styles.css" />
+    <link rel="stylesheet" href="../styles/favoritos.css" />
+    <link rel="stylesheet" href="../styles/links.css" />
+    <link rel="stylesheet" href="../styles/header.css" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
       integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
@@ -54,7 +55,7 @@
     </header>
     <section class="container-favoritos">
       <main>
-        <div>
+        <div class="container-title">
           <h1>Favoritos <i class="fa-solid fa-heart"></i></h1>
         </div>
         <div class="products-fav " id="favoritos-results">
@@ -65,3 +66,19 @@
     <script src="../scripts/amazon.js"></script>
   </body>
 </html>
+
+
+
+<!-- <div class="product">
+  <div class="product-heart product-heartClick"><i class="fa-solid fa-heart"></i></div>
+  <div class="product_infosImg">
+      <img src="${image}" alt="${title}">
+      <h2>${title}</h2>
+      <p class="pPromotion">${priceLater}</p>
+  </div>
+  <div class="product_infos">
+      <p class="price"><strong>${price}</strong></p>
+      <p>${gerarEstrelas(avaliation)} (${avaliation})</p>
+      <a href="${url}" target="_blank">Ver na Amazon</a>
+  </div>
+</div> -->
